# libint-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_boost_cpp1.72.0.yaml  linux_64_boost_cpp1.74.0.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_64_boost_cpp1.72.0.yaml  osx_64_boost_cpp1.74.0.yaml  osx_arm64_.yaml  win_64_.yaml
.github/: CODEOWNERS
recipe/: 0001-add-config-basic.patch  0001-add-config-bells.patch  0001-add-config-bigam.patch  0001-turn-on-unity-build.patch  CMakeLists2.txt  NOTES  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
recipe/tests/hartree-fock/: CMakeLists.txt
